Implement target KPI budget planning
